// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyProducts renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c1 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
  margin: 2rem auto;
  padding: 2rem;
}

@media (min-width:62em) {
  .c1 {
    -webkit-flex: 0 0 35%;
    -ms-flex: 0 0 35%;
    flex: 0 0 35%;
    max-width: 35%;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <p>
      We don't have any products for you to compare.
    </p>
  </div>
</div>
`;

exports[`ProductEmptyContainer renders correctly 1`] = `
.c0 {
  width: 100%;
  min-height: 1px;
  background-color: #eceff1;
  margin: 2rem auto;
  padding: 2rem;
}

<div
  class="c0"
>
  
</div>
`;

exports[`ProductError renders correctly 1`] = `
.c0 {
  background-color: #ff9800;
  color: #fff;
  padding: 1rem;
}

<div
  class="c0"
>
  We had problems retrieving products for you, retry or come back later.
</div>
`;

exports[`ProductList when not fetched renders correctly 1`] = `
.c0 {
  height: 35rem;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c0 {
    height: 9rem;
  }
}

<div>
  <div
    class="c0"
  >
    
  </div>
  <div
    class="c0"
  >
    
  </div>
  <div
    class="c0"
  >
    
  </div>
</div>
`;

exports[`ProductList with an error renders correctly 1`] = `
.c0 {
  background-color: #ff9800;
  color: #fff;
  padding: 1rem;
}

<div
  class="c0"
>
  We had problems retrieving products for you, retry or come back later.
</div>
`;

exports[`ProductList with no products renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c1 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
  margin: 2rem auto;
  padding: 2rem;
}

@media (min-width:62em) {
  .c1 {
    -webkit-flex: 0 0 35%;
    -ms-flex: 0 0 35%;
    flex: 0 0 35%;
    max-width: 35%;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <p>
      We don't have any products for you to compare.
    </p>
  </div>
</div>
`;

exports[`ProductList with products renders correctly 1`] = `
<styled.div>
  <Product
    key="0"
    product={
      Object {
        "brand": "Landbay",
        "columns": Array [
          Object {
            "label": "Max LTV",
            "value": "85%",
          },
          Object {
            "label": "Initial Rate",
            "value": "1.49%",
          },
          Object {
            "label": "Subsequent Rate",
            "value": "2.75%",
          },
          Object {
            "label": "Fees",
            "value": "£1,495",
          },
        ],
        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean bibendum facilisis condimentum. Donec laoreet porttitor condimentum. Nulla luctus efficitur magna, eget rhoncus metus placerat sed.",
        "highlighted": true,
        "highlighted_points": Array [
          "Online Application",
          "Mobile app",
          "Customer service winner",
        ],
        "labels": Array [
          "broker only",
          "consumer favourite",
        ],
        "links": Object {
          "apply": "https://b2bfinance.com/enquire/buy-to-let",
          "logo": "https://b2bfinance.com/images/partners/Landbay.png",
        },
        "meta": Object {
          "confirm": Object {
            "description": "B2Bfinance.com are registered intermediaries who will quote, package and submit your lending request to Natwest. There is no charge for this service as we are paid a small commission by Natwest to cover our time.",
            "heading": "Application via Brokers only",
          },
        },
        "technical_points": Array [
          "1.5% Early Repayment",
          "6 months cool off peroid",
          "No monthly fee for existing customers",
        ],
        "title": "Landbay - Buy To Let Wizards",
      }
    }
  />
  <Product
    key="1"
    product={
      Object {
        "brand": "Natwest",
        "columns": Array [
          Object {
            "label": "Max LTV",
            "value": "85%",
          },
          Object {
            "label": "Initial Rate",
            "value": "1.52%",
          },
          Object {
            "label": "Subsequent Rate",
            "value": "3.25%",
          },
          Object {
            "label": "Fees",
            "value": "£995",
          },
        ],
        "description": "",
        "highlighted": false,
        "highlighted_points": Array [],
        "labels": Array [],
        "links": Object {
          "apply": "https://b2bfinance.com/enquire/buy-to-let",
          "logo": "https://b2bfinance.com/images/partners/NatWest.png",
        },
        "meta": Object {
          "confirm": Object {
            "description": "B2Bfinance.com are registered intermediaries who will quote, package and submit your lending request to Natwest. There is no charge for this service as we are paid a small commission by Natwest to cover our time.",
            "heading": "Application via Brokers only",
          },
        },
        "technical_points": Array [],
        "title": "Natwest Low Low Rate",
      }
    }
  />
  <Product
    key="2"
    product={
      Object {
        "brand": "Barclays",
        "columns": Array [
          Object {
            "label": "Max LTV",
            "value": "80%",
          },
          Object {
            "label": "Initial Rate",
            "value": "1.75%",
          },
          Object {
            "label": "Subsequent Rate",
            "value": "3%",
          },
          Object {
            "label": "Fees",
            "value": "£995",
          },
        ],
        "description": "Whether your landlord is a first time buyer, a first time landlord or has a large portfolio, we have a range of products to help. Our range of mortgages also includes products for Limited Companies and HMOs.",
        "highlighted": false,
        "highlighted_points": Array [
          "Complete online application",
          "Mobile app",
          "Customer service winner",
        ],
        "labels": Array [
          "broker only",
        ],
        "links": Object {
          "apply": "https://b2bfinance.com/enquire/buy-to-let",
          "logo": "https://b2bfinance.com/images/partners/Precise.png",
        },
        "meta": Object {},
        "technical_points": Array [
          "Rental cover - ICR: based on individual circumstances",
          "5 year fixed rate products that help maximise the loan size available",
          "5 year fixed with 4% cashback available on purchases",
        ],
        "title": "Precise Oh So Precise Total Winners Deal",
      }
    }
  />
</styled.div>
`;

exports[`ProductLoadingMask renders correctly 1`] = `
.c0 {
  height: 35rem;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c0 {
    height: 9rem;
  }
}

<div>
  <div
    class="c0"
  >
    
  </div>
  <div
    class="c0"
  >
    
  </div>
  <div
    class="c0"
  >
    
  </div>
</div>
`;

exports[`ProductMask renders correctly 1`] = `
.c0 {
  background-color: #f5f6f7;
  height: 35rem;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c0 {
    height: 9rem;
  }
}

<div
  class="c0"
>
  
</div>
`;

exports[`ProductsLoadingContainer renders correctly 1`] = `
<div
  class=""
>
  
</div>
`;

exports[`ProductsLoadingContainer while loading renders correctly 1`] = `
.c0 {
  opacity: 0.75;
}

<div
  class="c0"
>
  
</div>
`;

exports[`StyledProductError renders correctly 1`] = `
.c0 {
  background-color: #ff9800;
  color: #fff;
  padding: 1rem;
}

<div
  class="c0"
>
  
</div>
`;
